[project]
name = "froide"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.10"
description = "German Freedom of Information Portal"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]
version = "5.0.0"
dependencies = [
  "bleach",
  "celery>=5.2.2",
  "channels==4.0.0",
  "coreapi",
  "dj-database-url",
  "django-celery-beat>=2.5.0",
  "django-celery-email",
  "django-configurations",
  "django-contrib-comments",
  "django-crossdomainmedia>=0.0.4",
  "django-elasticsearch-dsl>=8.0,<9.0",
  "django-filter",
  "django-fsm",
  "django-json-widget",
  "django-leaflet",
  "django-mfa3",
  "django-oauth-toolkit>=2.4.0",
  "django-parler",
  "django-storages",
  "django-taggit>=2",
  "django-treebeard",
  "django>=4.2,<5",
  "djangorestframework",
  "djangorestframework-csv",
  "djangorestframework-jsonp",
  "drf-spectacular[sidecar]",
  "easy-thumbnails>=2.9.0",
  "elasticsearch-dsl>=8.0.0,<9.0.0",
  "elasticsearch<9.0.0,>=8.0.0",
  "geoip2",
  "icalendar",
  "lxml[html-clean]>=5.2.0",
  "markdown",
  "phonenumbers",
  "pillow>=9.0.0",
  "pikepdf==9.5.2",
  "psycopg[binary]>=3.2.1",
  "pyisemail",
  "pypdf>=3",
  "python-magic",
  "python-mimeparse",
  "python-slugify",
  "reportlab",
  "requests",
  "wand",
  "weasyprint",
  "websockets",
  "django-filingcabinet @ git+https://github.com/okfde/django-filingcabinet.git@main",
  "dogtail @ git+https://github.com/okfde/dogtail.git@main",
]

[project.optional-dependencies]
test = [
  "beautifulsoup4",
  "coverage[toml]",
  "django-coverage-plugin",
  "django-stubs",
  "factory-boy",
  "faker",
  "monkeytype",
  "mypy",
  "pbr",
  "pre-commit",
  "pycodestyle",
  "pyflakes",
  "pytest-django",
  "pytest-factoryboy",
  "pytest-playwright",
  "tblib",
  "text-unidecode",
  "time-machine",
  "types-Markdown",
  "types-python-dateutil",
  "types-requests",
]

[build-system]
requires = ["setuptools>=74"]
build-backend = "setuptools.build_meta"

[tool.uv.pip]
universal = true

[tool.setuptools.packages.find]
include = ["froide*"]

[tool.ruff]
exclude = ["migrations", "build", "node_modules"]

[tool.ruff.lint]
ignore = ["E501", "C901"]
select = ["C", "E", "F", "W", "B", "I001"]

[tool.ruff.lint.pycodestyle]
max-line-length = 88

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
section-order = [
  "future",
  "standard-library",
  "django",
  "third-party",
  "first-party",
  "local-folder",
]
default-section = "third-party"
known-first-party = ["froide"]

[tool.ruff.lint.isort.sections]
django = ["django"]

[tool.djlint]
ignore = "T002,T003,H005,H006,H021,H023,H029,H030,H031"

[tool.coverage.run]
source = ["froide"]
omit = ["*/migrations/*", "*/wsgi.py", "*/asgi.py"]
plugins = ["django_coverage_plugin"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = ["pragma: no cover"]

[tool.pytest.ini_options]
DJANGO_CONFIGURATION = "Test"
DJANGO_SETTINGS_MODULE = "froide.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = ["--reuse-db"]
markers = ["no_delivery_mock"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true
python_version = "3.10"

[tool.django-stubs]
django_settings_module = "froide.settings"
